k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fleksitask
  labels:
    app.kubernetes.io/part-of: fleksitask
