k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fleksitask-ingress
  namespace: fleksitask
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - fleksitask.com
        - admin.fleksitask.com
        - api.fleksitask.com
      secretName: fleksitask-tls
  rules:
    - host: fleksitask.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-web-service
                port:
                  number: 80
    - host: admin.fleksitask.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-service
                port:
                  number: 80
    - host: api.fleksitask.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8000
